--- a/src/app/main/apps/admin/add-edit-admin/add-edit-admin.component.html
+++ b/src/app/main/apps/admin/add-edit-admin/add-edit-admin.component.html
@@ -21,7 +21,7 @@
                 Submit
             </button>
             &nbsp;&nbsp;
-            <button mat-raised-button type="button" color="warn">
+            <button mat-raised-button type="button" color="warn" [routerLink]="['/admin']">
                 Cancel
             </button>
         </div>
