--- a/src/app/main/apps/photographer/add-edit-photographer/add-edit-photographer.component.html
+++ b/src/app/main/apps/photographer/add-edit-photographer/add-edit-photographer.component.html
@@ -17,7 +17,7 @@
                 Submit
             </button>
             &nbsp;&nbsp;
-            <button mat-raised-button type="button" color="warn">
+            <button mat-raised-button type="button" color="warn" [routerLink]="['/photographer']">
                 Cancel
             </button>
         </div>
