--- a/src/app/main/apps/sales-representative/list-sales-representative/list-sales-representative.component.html
+++ b/src/app/main/apps/sales-representative/list-sales-representative/list-sales-representative.component.html
@@ -22,10 +22,10 @@
             </div>
 
             <!-- ADD BUTTON -->
-            <!-- <button mat-raised-button [routerLink]="'/customer/add'"
+            <button mat-raised-button [routerLink]="'/sales-representative/add'"
                 class="add-product-button fuse-white mt-24 mt-md-0">
-                <span>ADD NEW CUSTOMER</span>
-            </button> -->
+                <span>Add New Sales Representative</span>
+            </button>
             <!-- / ADD BUTTON -->
 
         </div>
