--- a/src/app/main/apps/customer/list-customer/list-customer.component.html
+++ b/src/app/main/apps/customer/list-customer/list-customer.component.html
@@ -101,7 +101,8 @@
 
             </mat-table>
 
-            <mat-paginator #paginator [length]="_customerService.total" [pageIndex]="pageIndex" [pageSize]="pageSize">
+            <mat-paginator #paginator [length]="_customerService.total" [pageIndex]="pageIndex" [pageSize]="pageSize"
+                [pageSizeOptions]="pageSizeOptions">
             </mat-paginator>
 
         </div>
