--- a/src/app/main/apps/editor/list-editors/list-editors.component.html
+++ b/src/app/main/apps/editor/list-editors/list-editors.component.html
@@ -100,7 +100,8 @@
                 </mat-row>
 
             </mat-table>
-            <mat-paginator #paginator [length]="_editorService.total" [pageIndex]="pageIndex" [pageSize]="pageSize">
+            <mat-paginator #paginator [length]="_editorService.total" [pageIndex]="pageIndex" [pageSize]="pageSize"
+                [pageSizeOptions]="pageSizeOptions">
             </mat-paginator>
 
         </div>
