--- a/src/app/main/apps/photographer/list-photographer/list-photographer.component.html
+++ b/src/app/main/apps/photographer/list-photographer/list-photographer.component.html
@@ -103,7 +103,7 @@
             </mat-table>
 
             <mat-paginator #paginator [length]="_photographerService.total" [pageIndex]="pageIndex"
-                [pageSize]="pageSize">
+                [pageSize]="pageSize" [pageSizeOptions]="pageSizeOptions">
             </mat-paginator>
 
         </div>
