--- a/src/app/main/apps/sales-representative/list-sales-representative/list-sales-representative.component.html
+++ b/src/app/main/apps/sales-representative/list-sales-representative/list-sales-representative.component.html
@@ -108,7 +108,7 @@
             </mat-table>
 
             <mat-paginator #paginator [length]="_salesRepresentativeService.total" [pageIndex]="pageIndex"
-                [pageSize]="pageSize">
+                [pageSize]="pageSize" [pageSizeOptions]="pageSizeOptions">
             </mat-paginator>
 
         </div>
