logo and title changes

--- a/src/app/main/apps/editor/list-editors/list-editors.component.html
+++ b/src/app/main/apps/editor/list-editors/list-editors.component.html
@@ -71,7 +71,7 @@
 
                 <!-- Price Column -->
                 <ng-container matColumnDef="loginAsEditor">
-                    <mat-header-cell *matHeaderCellDef mat-sort-header>Login As Customer</mat-header-cell>
+                    <mat-header-cell *matHeaderCellDef mat-sort-header>Login As Editor</mat-header-cell>
                     <mat-cell *matCellDef="let admin">
                         <p class="text-truncate">{{admin.loginAsEditor}}</p>
                     </mat-cell>
