--- a/src/app/main/apps/photographer/list-photographer/list-photographer.component.html
+++ b/src/app/main/apps/photographer/list-photographer/list-photographer.component.html
@@ -72,7 +72,7 @@
 
                 <!-- Price Column -->
                 <ng-container matColumnDef="loginAsPhotographer">
-                    <mat-header-cell *matHeaderCellDef mat-sort-header>Login As Customer</mat-header-cell>
+                    <mat-header-cell *matHeaderCellDef mat-sort-header>Login As Photographer</mat-header-cell>
                     <mat-cell *matCellDef="let product">
                         <p class="text-truncate">{{product.loginAsPhotographer}}</p>
                     </mat-cell>
