--- a/src/app/main/apps/admin/list-admin/list-admin.component.html
+++ b/src/app/main/apps/admin/list-admin/list-admin.component.html
@@ -72,7 +72,8 @@
                 <ng-container matColumnDef="loginAsAdmin">
                     <mat-header-cell *matHeaderCellDef mat-sort-header>Login As Admin</mat-header-cell>
                     <mat-cell *matCellDef="let admin">
-                        <p class="text-truncate">{{admin.loginAsAdmin}}</p>
+                        <!-- <p class="text-truncate">{{admin.loginAsAdmin}}</p> -->
+                        <mat-icon matSuffix class="secondary-text">check_circle_outline</mat-icon>
                     </mat-cell>
                 </ng-container>
 
