--- a/src/app/main/apps/customer/list-customer/list-customer.component.html
+++ b/src/app/main/apps/customer/list-customer/list-customer.component.html
@@ -73,7 +73,8 @@
                 <ng-container matColumnDef="login_as_customer">
                     <mat-header-cell *matHeaderCellDef mat-sort-header>Login As Customer</mat-header-cell>
                     <mat-cell *matCellDef="let product">
-                        <p class="text-truncate">{{product.login_as_customer}}</p>
+                        <!-- <p class="text-truncate">{{product.login_as_customer}}</p> -->
+                        <mat-icon matSuffix class="secondary-text">check_circle_outline</mat-icon>
                     </mat-cell>
                 </ng-container>
 
