--- a/src/app/main/apps/editor/list-editors/list-editors.component.html
+++ b/src/app/main/apps/editor/list-editors/list-editors.component.html
@@ -73,7 +73,8 @@
                 <ng-container matColumnDef="loginAsEditor">
                     <mat-header-cell *matHeaderCellDef mat-sort-header>Login As Editor</mat-header-cell>
                     <mat-cell *matCellDef="let admin">
-                        <p class="text-truncate">{{admin.loginAsEditor}}</p>
+                        <!-- <p class="text-truncate">{{admin.loginAsEditor}}</p> -->
+                        <mat-icon matSuffix class="secondary-text">check_circle_outline</mat-icon>
                     </mat-cell>
                 </ng-container>
 
