--- a/src/app/main/apps/photographer/list-photographer/list-photographer.component.html
+++ b/src/app/main/apps/photographer/list-photographer/list-photographer.component.html
@@ -74,7 +74,8 @@
                 <ng-container matColumnDef="loginAsPhotographer">
                     <mat-header-cell *matHeaderCellDef mat-sort-header>Login As Photographer</mat-header-cell>
                     <mat-cell *matCellDef="let product">
-                        <p class="text-truncate">{{product.loginAsPhotographer}}</p>
+                        <!-- <p class="text-truncate">{{product.loginAsPhotographer}}</p> -->
+                        <mat-icon matSuffix class="secondary-text">check_circle_outline</mat-icon>
                     </mat-cell>
                 </ng-container>
 
